--- a/handout/structure.tex
+++ b/handout/structure.tex
@@ -21,7 +21,11 @@
 \usepackage{booktabs}
 \usepackage{natbib} % Use natbib to manage the reference
 \usepackage{bibentry}
-\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{graphicx, wrapfig}
+\graphicspath{ {./imgs/} }
+
 \nobibliography*
 \bibliographystyle{plain} % Citation style
 
@@ -33,6 +37,7 @@
 \newcommand{\horrule}[1]{\rule{\linewidth}{#1}} % Create horizontal rule command with 1 argument of height
 \newcommand{\papertitle}[1]{\renewcommand{\papertitle}{#1}} % Define a command for storing the article title
 \newcommand{\papercitation}[1]{\renewcommand{\papercitation}{#1}} % Define a command for storing the article citation
+\newcommand{\lectureabstract}[1]{\renewcommand{\lectureabstract}{#1}}
 % \newcommand{\doctitle}{``\papertitle''\---\papercitation  } % Define a command to store the article information as it will appear in the title and header
 
 \newcommand{\datenotesstarted}[1]{\renewcommand{\datenotesstarted}{#1}} % Define a command to store the date when notes were first made
@@ -50,9 +55,11 @@
   \bigskip
 
   \textbf{\Large{"\papertitle"}}
-
-  \papercitation 
-
+  
+  \bigskip
+  \begin{minipage}{.9\textwidth}
+  \lectureabstract
+  \end{minipage}
   \bigskip
   
   \docdate
