--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -290,7 +290,7 @@ erro_{S}(h) \equiv \underset{x \sim \mathcal{S}}{Pr}[c(x) \neq h(x)]
 \begin{frame}<beamer>[standout]
   Obrigado.
   \vspace*{.5cm}
-\begin{center}\href{https://github.com/fredguth/learning_theory}{\url{github.com/fredguth/learning_theory}}\end{center}
+\begin{center}\href{https://github.com/fredguth/learning_theory.git}{\url{github.com/fredguth/learning_theory}}\end{center}
   \vspace*{.5cm}
   \small{
     \begin{center}\ccbysa\end{center}
