--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -70,7 +70,7 @@ Seminário}
 
 {
 \AtBeginSection{}
-\section{Teoria da Aprendizagem Computacional}
+\section{Preâmbulo: Teoria da Aprendizagem Computacional}
 \begin{frame}{Teoria da Aprendizagem Computacional}
 
     \centering
@@ -114,7 +114,7 @@ Não há justificativa para generalizações~\cite{Hume2009Tratado}:
 \end{columns}
 \end{frame}
 
-\begin{frame}{Table of contents}
+\begin{frame}{Índice}
   \setbeamertemplate{section in toc}[sections numbered]
   \tableofcontents[hideallsubsections]
 \end{frame}
