--- a/handout/references.bib
+++ b/handout/references.bib
@@ -7,6 +7,13 @@
   title = {A theory of the learnable},
   booktitle = {Proceedings of the sixteenth annual {ACM} symposium on Theory of computing  - {STOC} {\textquotesingle}84}
 }
+@book{FoundationsML,
+ author = {Mohri, Mehryar and Rostamizadeh, Afshin and Talwalkar, Ameet},
+ title = {Foundations of Machine Learning},
+ year = {2012},
+ isbn = {026201825X, 9780262018258},
+ publisher = {The MIT Press},
+} 
 @book{Hume2009Tratado,
   title={Tratado da natureza humana - 2a Edi{\c{c}}{\~a}o},
   author={Hume, D.},
