--- a/handout/structure.tex
+++ b/handout/structure.tex
@@ -22,8 +22,13 @@
 \usepackage{natbib} % Use natbib to manage the reference
 \usepackage{bibentry}
 \usepackage{amsmath}
+\usepackage[makeroom]{cancel}
 \usepackage{amsthm}
 \usepackage{graphicx, wrapfig}
+\usepackage{amssymb}
+
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows, automata, quotes}
 \graphicspath{ {./imgs/} }
 
 \nobibliography*
