--- a/slides/references.bib
+++ b/slides/references.bib
@@ -39,6 +39,14 @@
   urldate = {2019-03-21}
 }
 
+@book{FoundationsML,
+ author = {Mohri, Mehryar and Rostamizadeh, Afshin and Talwalkar, Ameet},
+ title = {Foundations of Machine Learning},
+ year = {2012},
+ isbn = {026201825X, 9780262018258},
+ publisher = {The MIT Press},
+} 
+
 @article{Haussler1988,
   doi = {10.1016/0004-3702(88)90002-1},
   url = {https://doi.org/10.1016/0004-3702(88)90002-1},
